--- a/action.yml
+++ b/action.yml
@@ -20,12 +20,6 @@ inputs:
 
 runs:
   using: docker
-  image: duffn/python-poetry:3.9.18-slim-1.6.1-2023-10-06
-  steps:
-    - name: Show Inputs Message
-      shell: bash
-      run: |
-        echo "The followwinig inputs have been provided:"
-        echo "  target-env: ${{ inputs.target-env }}"
-        echo "  qe-platform-tag: ${{ inputs.qe-platform-tag }}"
-        echo "  pytest-arguments: ${{ inputs.pytest-arguments }}"
+  image: alpine:3.10
+  args:
+    echo "At the beep it will be $date. Beep!"
