--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,6 @@ inputs:
 
 runs:
   using: docker
-  image: alpine:3.10
+  image: docker://alpine:3.10
   args:
     - echo "At the beep it will be..."
