--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
       uses: addnab/docker-run-action@v3
       with:
         image: python:3.14.0b3-bullseye
-        options: -e INPUTS_TARGET_ENV="${{ inputs.target-env }}" -e INPUTS_QE_PLATFORM_TAG="${{ inputs.qe-platform-tag }}" -e INPUTS_PYTEST_ARGUMENTS="${{ inputs.pytest-arguments }}"
+        options: -e INPUTS_TARGET_ENV="${{ inputs.target-env }}" -e INPUTS_QE_PLATFORM_TAG="${{ inputs.qe-platform-tag }}" -e INPUTS_PYTEST_ARGUMENTS=\"${{ inputs.pytest-arguments }}\"
         run: |
           python3 -c "import os;print(f\"poetry run pytest --target-env={os.getenv('INPUTS_TARGET_ENV')} --qe-platform-tag={os.getenv('INPUTS_QE_PLATFORM_TAG')} {os.getenv('INPUTS_PYTEST_ARGUMENTS')} \")" 
           
