--- a/action.yml
+++ b/action.yml
@@ -36,5 +36,5 @@ runs:
         image: python:3.14.0b3-bullseye
         options: -e INPUTS_TARGET_ENV="${{ inputs.target-env }}" -e INPUTS_QE_PLATFORM_TAG="${{ inputs.qe-platform-tag }}"
         run: |
-          python3 -c "import os;print(f\"poetry run pytest --target-env={os.getenv('INPUTS_TARGET_ENV')} --qe-platform-tag={os.getenv('INPUTS_QE_PLATFORM_TAG')}\"  + \" + ${{ inputs.pytest-arguments }} + "\")" 
+          python3 -c "import os;import shlex;run_args=\"--target-env=\\\"{os.getenv('INPUTS_TARGET_ENV', 'un kn own')}\\\"\";print(run_args)"
           
